<resources>
    <string name="app_name">VeriBOX</string>
    <string name="admin_permission_label">VeriBOX App</string>
    <string name="admin_permission_description">Ability to run on Kiosk Mode</string>
    <string name="app_ver">VBX3.0-0</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="website_url">http://aiemexico.com.mx/</string>
    <string name="failedToConnect">Fallo conexion con Impresora.</string>
    <string name="no_bt_device">Bluetooth no esta ativado</string>
    <string name="pleaseWait">Espere...</string>
    <string name="makingConnectionString">Conenctando a Impresora bluetooth...</string>
    <string name="config">Configurar</string>
    <string name="gerente">GERENTE</string>
    <string name="pide_pas">Clave: </string>
    <string name="waiting_for_card">Please insert or swipe card now.</string>
    <string name="please_swipe_card">Please swipe card</string>
    <string name="no_card_detected">No card detected</string>
    <string name="icc_card_inserted">ICC Card Inserted</string>
    <string name="card_inserted">Card Inserted (Not ICC). Please swipe card</string>
    <string name="bad_swipe">Bad Swipe</string>
    <string name="card_swiped">Tarjeta Reconocida: </string>
    <string name="mag_head_fail">Magnetic head fail</string>
    <string name="card_no_response">Check card no response</string>
    <string name="card_swiped_track2_only">Card Swiped (Track 2 only):\n</string>
    <string name="format_id">Format ID: </string>
    <string name="masked_pan">Masked PAN: </string>
    <string name="pan">PAN:</string>
    <string name="expiry_date">Expiry Date: </string>
    <string name="cardholder_name">Cardholder Name: </string>
    <string name="ksn">KSN: </string>
    <string name="epb">EPB: </string>
    <string name="service_code">Service Code: </string>
    <string name="track_1_length">Track 1 Length: </string>
    <string name="track_2_length">Track 2 Length: </string>
    <string name="track_3_length">Track 3 Length: </string>
    <string name="encrypted_tracks">Encrypted Tracks: </string>
    <string name="encrypted_track_1">Encrypted Track 1: </string>
    <string name="encrypted_track_2">Encrypted Track 2: </string>
    <string name="encrypted_track_3">Encrypted Track 3: </string>
    <string name="track_1_status">Track 1 Status: </string>
    <string name="track_2_status">Track 2 Status: </string>
    <string name="track_3_status">Track 3 Status: </string>
    <string name="partial_track">Partial Track: </string>
    <string name="product_type">Product Type:</string>
    <string name="card_data">Card Data: </string>
    <string name="start_emv_fail">Start EMV failed</string>
    <string name="start_emv_success">Start EMV success</string>
    <string name="app_version">App Version: </string>
    <string name="bootloader_version">Bootloader Version: </string>
    <string name="firmware_version">Firmware Version: </string>
    <string name="usb">USB: </string>
    <string name="charge">Charge: </string>
    <string name="battery_level">Battery Level: </string>
    <string name="battery_percentage">Battery Percentage:</string>
    <string name="hardware_version">Hardware Version: </string>
    <string name="supported_track">Supported Track: </string>
    <string name="track_1_supported">Track 1 Supported: </string>
    <string name="track_2_supported">Track 2 Supported: </string>
    <string name="track_3_supported">Track 3 Supported: </string>
    <string name="product_id">Product ID:</string>
    <string name="pin_ksn">PIN KSN: </string>
    <string name="emv_ksn">EMV KSN: </string>
    <string name="track_ksn">Track KSN: </string>
    <string name="unknown">Unknown</string>
    <string name="set_amount">Fijar Monto</string>
    <string name="enter_pin">Please enter PIN</string>
    <string name="online_process_requested">Online process requested.</string>
    <string name="request_data_to_server">Request data to server.</string>
    <string name="replied_connected">Replied connected.</string>
    <string name="replied_success">Replied success.</string>
    <string name="replied_failed">Replied failed.</string>
    <string name="batch_data">Batch Data:</string>
    <string name="transaction_log">Transaction Log:\n</string>
    <string name="reversal_data">Reversal Data:\n</string>
    <string name="please_select_app">Selecione Aplicacion</string>
    <string name="transaction_result">Transaction Result</string>
    <string name="transaction_approved">CARGO\nAUTORIZADO</string>
    <string name="transaction_terminated">Terminated</string>
    <string name="transaction_declined">CARGO\nDECLINADO</string>
    <string name="transaction_cancel">Cancel</string>
    <string name="transaction_capk_fail">Fail (CAPK fail)</string>
    <string name="transaction_not_icc">Fail (Not ICC card)</string>
    <string name="transaction_app_fail">Fail (App fail)</string>
    <string name="transaction_device_error">Device Error</string>
    <string name="transaction_application_blocked">Application Blocked</string>
    <string name="transaction_icc_card_removed">ICC card removed</string>
    <string name="tlv_list">TLV List:\n</string>
    <string name="advice_process">Advice Process.</string>
    <string name="call_your_bank">Please call your bank</string>
    <string name="request_terminal_time">Request Terminal Time. Replied </string>
    <string name="confirm_amount">Confirm amount</string>
    <string name="amount">Monto</string>
    <string name="amount_ok">Amount OK?</string>
    <string name="approved">Approved</string>
    <string name="cancel_or_enter">Cancel or Enter</string>
    <string name="card_error">Card error</string>
    <string name="declined">Declined</string>
    <string name="enter_amount">Please enter amount</string>
    <string name="incorrect_pin">Incorrect PIN</string>
    <string name="insert_card">Please insert card</string>
    <string name="not_accepted">Not accepted</string>
    <string name="pin_ok">PIN OK</string>
    <string name="wait">Please wait&#8230;</string>
    <string name="processing_error">Processing error</string>
    <string name="remove_card">Please remove card</string>
    <string name="use_chip_reader">Please use chip reader</string>
    <string name="use_mag_stripe">Please use mag stripe</string>
    <string name="try_again">Please try again</string>
    <string name="refer_payment_device">Please refer to your payment device</string>
    <string name="try_another_interface">Please try another interface</string>
    <string name="online_required">Online required</string>
    <string name="processing">Processing&#8230;</string>
    <string name="welcome">Welcome</string>
    <string name="present_one_card">Please present only one card</string>
    <string name="capk_failed">CAPK loading failed</string>
    <string name="last_pin_try">Last PIN try</string>
    <string name="select_account">Please select account</string>
    <string name="battery_low">Device battery low, please charge</string>
    <string name="battery_critically_low">Device battery critically low and powered off</string>
    <string name="no_device_detected">No device detected.</string>
    <string name="device_plugged">Device plugged.</string>
    <string name="device_unplugged">Device unplugged.</string>
    <string name="command_not_available">Command not available</string>
    <string name="device_no_response">Device no response</string>
    <string name="device_reset">Device reset</string>
    <string name="unknown_error">Unknown error</string>
    <string name="device_busy">Device Busy</string>
    <string name="out_of_range">Input out of range.</string>
    <string name="invalid_format">Input invalid format.</string>
    <string name="zero_values">Input are zero values.</string>
    <string name="input_invalid">Input invalid.</string>
    <string name="cashback_not_supported">Cashback not supported.</string>
    <string name="crc_error">CRC Error.</string>
    <string name="comm_error">Communication Error.</string>
    <string name="device_off">Device powered off.</string>
    <string name="get_info">Get Device Info</string>
    <string name="clear_log">Clear Log</string>
    <string name="check_card">Check Card</string>
    <string name="start_emv">Start EMV</string>
    <string name="cancel">Cancel</string>
    <string name="pin">PIN</string>
    <string name="cashback_amount">Devolucion </string>
    <string name="confirm">Aceptar</string>
    <string name="bypass">Bypass</string>
    <string name="decline">Decline</string>
    <string name="connection">Connection</string>
    <string name="start_connection">Start Connection</string>
    <string name="stop_connection">Stop Connection</string>
    <string name="paired_devices">Paired Devices</string>
    <string name="scan_and_connect">Scan and Connect</string>
    <string name="scanning_bluetooth_2">Scanning Bluetooth 2&#8230;</string>
    <string name="scanning_bluetooth_4">Scanning Bluetooth 4&#8230;</string>
    <string name="btv4_devices">Bluetooth 4 Devices</string>
    <string name="bluetooth_2_detected">Bluetooth 2 detected</string>
    <string name="connecting_bluetooth_2">Connecting Bluetooth 2&#8230;</string>
    <string name="connecting_bluetooth_4">Connecting Bluetooth 4&#8230;</string>
    <string name="bluetooth_2_connected">Bluetooth 2 connected</string>
    <string name="bluetooth_2_disconnected">Bluetooth 2 disconnected</string>
    <string name="bluetooth_4_connected">Bluetooth 4 connected</string>
    <string name="bluetooth_4_disconnected">Bluetooth 4 disconnected</string>
    <string name="bluetooth_4_scan_timeout">Bluetooth 4 scan timeout</string>
    <string name="bluetooth_4_scan_stopped">Bluetooth 4 scan stopped</string>
    <string name="audio_started">Audio started</string>
    <string name="amount_confirmed">Amount confirmed</string>
    <string name="amount_canceled">Amount canceled</string>
    <string name="please_swipe_or_insert">Please insert or swipe card</string>
    <string name="pin_entered">Ingrese PIN</string>
    <string name="pin_bypassed">PIN bypassed</string>
    <string name="pin_canceled">PIN canceled</string>
    <string name="pin_timeout">PIN timeout</string>
    <string name="key_error">Key error</string>
    <string name="no_pin">No PIN</string>
    <string name="fail_to_start_audio">Fail to start audio</string>
    <string name="fail_to_start_bluetooth_v2">Fail to start bluetooth 2.0</string>
    <string name="fail_to_start_bluetooth_v4">Fail to start bluetooth 4.0</string>
    <string name="invalid_function">Invalid function</string>
    <string name="comm_link_uninitialized">Comm link uninitialized</string>
    <string name="bluetooth_2_already_started">Error: Bluetooth 2 already started</string>
    <string name="bluetooth_4_already_started">Error: Bluetooth 4 already started</string>
    <string name="bluetooth_4_not_supported">Bluetooth 4 not supported</string>
    <string name="getting_info">Getting device info&#8230;</string>
    <string name="starting">Starting&#8230;</string>
    <string name="please_confirm_amount">Por favor confirmar cantidad en WisePad</string>
    <string name="start">Reintentar</string>
    <string name="cancel_check_card_success">Cancel check card success</string>
    <string name="cancel_check_card_fail">Cancel check card fail</string>
    <string name="printer_command_success">Printer command success</string>
    <string name="no_paper">No paper</string>
    <string name="wrong_printer_cmd">Wrong printer command</string>
    <string name="request_printer_data">Request printer data:</string>
    <string name="metodo1">01 Efectivo</string>
    <string name="metodo2">02 Cheque</string>
    <string name="metodo3">03 Transferencia</string>
    <string name="metodo4">04 Tarjeta de Crédito</string>
    <string name="metodo5">28 Tarjeta de Débito</string>
    <string name="metodo6">99 Por Definir</string>
</resources>