<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="visible">

            <TextView
                android:id="@+id/textView34"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="100dp"
                android:gravity="top|center_horizontal"
                android:text="IMPRIMIR FACTURA"
                android:textColor="@android:color/black"
                android:textSize="80dp" />

            <LinearLayout
                android:layout_width="1100dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="100dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button24"
                    android:layout_width="20dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="completa"
                    android:text="COMPLETA"
                    android:textColor="@android:color/black"
                    android:textSize="50sp" />

                <Button
                    android:id="@+id/button23"
                    android:layout_width="30dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="100dp"
                    android:layout_weight="1"
                    android:onClick="simpli"
                    android:text="COMPACTA"
                    android:textColor="@android:color/black"
                    android:textSize="50sp" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:visibility="visible"
            android:weightSum="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/textView29"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="top|center_horizontal"
                    android:text="FORMA PAGO"
                    android:textColor="@android:color/black"
                    android:textSize="50sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="60sp"
                android:orientation="horizontal">

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="0dp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="15dp"
                            android:layout_weight="0.41"
                            android:orientation="vertical">

                            <RadioButton
                                android:id="@+id/metodo1"
                                android:layout_width="500dp"
                                android:layout_height="60dp"
                                android:layout_marginTop="10sp"
                                android:layout_weight="1"
                                android:onClick="onRadioButtonClicked"
                                android:text="@string/metodo1"
                                android:textSize="@dimen/tamano_50" />

                            <RadioButton
                                android:id="@+id/metodo4"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="10sp"
                                android:layout_weight="1"
                                android:onClick="onRadioButtonClicked"
                                android:text="@string/metodo4"
                                android:textSize="@dimen/tamano_50" />

                            <RadioButton
                                android:id="@+id/metodo5"
                                android:layout_width="wrap_content"
                                android:layout_height="60dp"
                                android:layout_marginTop="10sp"
                                android:onClick="onRadioButtonClicked"
                                android:text="@string/metodo5"
                                android:textSize="@dimen/tamano_50" />


                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="15dp"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <RadioButton
                                android:id="@+id/metodo2"
                                android:layout_width="500dp"
                                android:layout_height="60dp"
                                android:layout_marginTop="10sp"
                                android:layout_weight="1"
                                android:onClick="onRadioButtonClicked"
                                android:text="@string/metodo2"
                                android:textSize="@dimen/tamano_50" />


                            <RadioButton
                                android:id="@+id/metodo3"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="10sp"
                                android:onClick="onRadioButtonClicked"
                                android:text="@string/metodo3"
                                android:textSize="@dimen/tamano_50" />

                            <RadioButton
                                android:id="@+id/metodo6"
                                android:layout_width="wrap_content"
                                android:layout_height="60dp"
                                android:layout_marginTop="10sp"
                                android:onClick="onRadioButtonClicked"
                                android:text="@string/metodo6"
                                android:textSize="@dimen/tamano_50" />

                        </LinearLayout>

                    </LinearLayout>


                </RadioGroup>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/tamano_30">

                <Button
                    android:id="@+id/button2"
                    android:layout_width="@dimen/imagen_gnr"
                    android:layout_height="@dimen/imagen_gnr"
                    android:background="@drawable/back"
                    android:onClick="atras"
                    android:textSize="50dp" />

                <EditText
                    android:id="@+id/editText01"
                    android:layout_width="220dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="50sp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="number"
                    android:maxLength="4"
                    android:nextFocusDown="@id/editText01"
                    android:nextFocusForward="@id/editText01"
                    android:nextFocusLeft="@id/editText01"
                    android:nextFocusRight="@id/editText01"
                    android:nextFocusUp="@id/editText01"
                    android:onClick="ok"
                    android:textSize="50sp"
                    android:visibility="invisible" />

                <Button
                    android:id="@+id/button1"
                    android:layout_width="@dimen/imagen_gnr"
                    android:layout_height="@dimen/imagen_gnr"
                    android:layout_marginLeft="50sp"
                    android:background="@drawable/check"
                    android:focusable="true"
                    android:onClick="ok"
                    android:textSize="50dp" />

            </LinearLayout>

        </LinearLayout>

        <!--
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/strXY" />
        -->

    </FrameLayout>


</LinearLayout>